--- a/PEAG-ref.bib
+++ b/PEAG-ref.bib
@@ -1091,6 +1091,40 @@
   file = {/Users/pabloalanis/Zotero/storage/BLIXTJW4/Hofmann et al_2020_Zinc(II) acetate catalyzed depolymerization of poly(ethylene terephthalate).pdf}
 }
 
+@article{Hofmann2020a,
+  title = {Zinc({{II}}) Acetate {{Catalyzed Depolymerization}} of {{Poly}}(Ethylene Terephthalate)},
+  author = {Hofmann, Melanie and Sundermeier, Jannis and Alberti, Christoph and Enthaler, Stephan},
+  year = {2020},
+  month = aug,
+  journal = {ChemistrySelect},
+  volume = {5},
+  number = {32},
+  pages = {10010--10014},
+  issn = {2365-6549, 2365-6549},
+  doi = {10/gjqg6m},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/slct.202002260},
+  urldate = {2022-03-14},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/9R2GN5QP/Hofmann et al. - 2020 - Zinc(II) acetate Catalyzed Depolymerization of Pol.pdf}
+}
+
+@article{Hofmann2020b,
+  title = {Zinc({{II}}) Acetate {{Catalyzed Depolymerization}} of {{Poly}}(Ethylene Terephthalate)},
+  author = {Hofmann, Melanie and Sundermeier, Jannis and Alberti, Christoph and Enthaler, Stephan},
+  year = {2020},
+  month = aug,
+  journal = {ChemistrySelect},
+  volume = {5},
+  number = {32},
+  pages = {10010--10014},
+  issn = {2365-6549, 2365-6549},
+  doi = {10.1002/slct.202002260},
+  url = {https://onlinelibrary.wiley.com/doi/10.1002/slct.202002260},
+  urldate = {2022-03-14},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/7S442T6K/Hofmann et al. - 2020 - Zinc(II) acetate Catalyzed Depolymerization of Pol.pdf}
+}
+
 @article{Huang2021,
   title = {Ab Initio Machine Learning in Chemical Compound Space},
   author = {Huang, Bing and {von Lilienfeld}, O. Anatole},
@@ -1199,6 +1233,23 @@
   urldate = {2021-05-20},
   langid = {english},
   file = {/Users/pabloalanis/Zotero/storage/DXIY9WQ2/James Schiller - 2019 - Supporting students and chemists with disabilities.pdf}
+}
+
+@article{Jehanno2019,
+  title = {Organocatalysis for Depolymerisation},
+  author = {Jehanno, Coralie and {P{\'e}rez-Madrigal}, Maria M. and Demarteau, Jeremy and Sardon, Haritz and Dove, Andrew P.},
+  year = {2019},
+  journal = {Polym. Chem.},
+  volume = {10},
+  number = {2},
+  pages = {172--186},
+  issn = {1759-9954, 1759-9962},
+  doi = {10/gfjwkw},
+  url = {http://xlink.rsc.org/?DOI=C8PY01284A},
+  urldate = {2022-03-14},
+  abstract = {Chemical recycling of plastics offers a green method to deal with plastic waste. In this review, we highlight the recent advances made by applying organocatalysts to chemically degrade polymers as a promising tool to reach a circular plastic economy.           ,                             Polymeric materials have been accumulating in the environment for decades as a result of the linear way of consuming plastics. Unfortunately, the current approaches followed to treat such a large amount of plastic waste, mainly involving physical recycling or pyrolysis, are not efficient enough. Recently, chemical degradation has emerged as a long-term strategy towards reaching completely sustainable cycles where plastics are polymerised, depolymerised, and then re-polymerised with minimal changes in their quantity or final properties. Organocatalysts, which are promising ``green'' substitutes for traditional organometallic complexes, are able to catalyse depolymerisation reactions yielding highly pure small molecules that are adequate for subsequent polymerisations or other uses. Moreover, by varying several reaction parameters (               e.g.               solvent, temperature, concentration, co-catalyst,               etc.               ), the depolymerisation products can be tuned in innumerable possibilities, which further evidences the versatility of depolymerisation. In this review, we highlight the recent advances made by applying organocatalysts, such as organic bases, organic acids, and ionic compounds, to chemically degrade the most commonly used commercial polymers. Indeed, organocatalysis is envisaged as a promising tool to reach a circular and environmentally friendly plastic economy.},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/95KQ8TKA/Jehanno et al. - 2019 - Organocatalysis for depolymerisation.pdf}
 }
 
 @book{Jensen2017,
@@ -1546,24 +1597,6 @@
   urldate = {2022-03-12},
   langid = {english},
   file = {/Users/pabloalanis/Zotero/storage/CUCXBYCP/Lefebvre et al. - 2018 - The Independent Gradient Model A New Approach for.pdf}
-}
-
-@article{Lefebvre2018a,
-  title = {The {{Independent Gradient Model}}: {{A New Approach}} for {{Probing Strong}} and {{Weak Interactions}} in {{Molecules}} from {{Wave Function Calculations}}},
-  shorttitle = {The {{Independent Gradient Model}}},
-  author = {Lefebvre, Corentin and Khartabil, Hassan and Boisson, Jean-Charles and {Contreras-Garc{\'i}a}, Julia and Piquemal, Jean-Philip and H{\'e}non, Eric},
-  year = {2018},
-  month = mar,
-  journal = {ChemPhysChem},
-  volume = {19},
-  number = {6},
-  pages = {724--735},
-  issn = {14394235},
-  doi = {10/gpng7f},
-  url = {https://onlinelibrary.wiley.com/doi/10.1002/cphc.201701325},
-  urldate = {2022-03-13},
-  langid = {english},
-  file = {/Users/pabloalanis/Zotero/storage/S2FGI6IQ/Lefebvre et al. - 2018 - The Independent Gradient Model A New Approach for.pdf}
 }
 
 @book{Levine2013,
