--- a/PEAG-ref.bib
+++ b/PEAG-ref.bib
@@ -718,6 +718,36 @@
   annotation = {ECC: 0000019}
 }
 
+@article{Dupont1975,
+  title = {{[Spontaneous mortality and vascular lesions in 3 rat strains with different blood pressure levels]}},
+  author = {Dupont, J. and Dupont, J. C. and Milon, H. and Froment, A.},
+  year = {1975},
+  month = apr,
+  journal = {C R Acad Hebd Seances Acad Sci D},
+  volume = {280},
+  number = {13},
+  pages = {1637--1640},
+  abstract = {We have observed a high and significant mortality in spontaneously hypertensive rats compared to normotensive and hypotensive controls, in the fifth generation. The hypertensive rats exhibited a high frequency of cerebral haemorrhage and periarteritis nodosa.},
+  langid = {french},
+  pmid = {152},
+  keywords = {Animals,Blood Pressure,Cerebral Hemorrhage,Female,Hypertension,Hypotension,Longevity,Male,Meninges,Mesenteric Arteries,Polyarteritis Nodosa,Rats}
+}
+
+@article{Dupont1975a,
+  title = {{[Spontaneous mortality and vascular lesions in 3 rat strains with different blood pressure levels]}},
+  author = {Dupont, J. and Dupont, J. C. and Milon, H. and Froment, A.},
+  year = {1975},
+  month = apr,
+  journal = {C R Acad Hebd Seances Acad Sci D},
+  volume = {280},
+  number = {13},
+  pages = {1637--1640},
+  abstract = {We have observed a high and significant mortality in spontaneously hypertensive rats compared to normotensive and hypotensive controls, in the fifth generation. The hypertensive rats exhibited a high frequency of cerebral haemorrhage and periarteritis nodosa.},
+  langid = {french},
+  pmid = {152},
+  keywords = {Animals,Blood Pressure,Cerebral Hemorrhage,Female,Hypertension,Hypotension,Longevity,Male,Meninges,Mesenteric Arteries,Polyarteritis Nodosa,Rats}
+}
+
 @article{Elizondo-Martinez2013,
   title = {Polyaza Macroligands as Potential Agents for Heavy Metal Removal from Wastewater},
   author = {{Elizondo-Mart{\'i}nez}, Perla and {N{\'a}jera-Mart{\'i}nez}, Blanca and {P{\'e}rez-Rodr{\'i}guez}, Nancy and {Hinojosa-Reyes}, Laura and G{\'o}mez Del R{\'i}o, Isabel},
@@ -1790,7 +1820,8 @@
   url = {http://doi.wiley.com/10.1002/jcc.22885},
   urldate = {2021-04-28},
   langid = {english},
-  annotation = {ECC: 0008544  ZSCC: 0008621 5710 citations (Semantic Scholar/DOI) [2021-04-28]}
+  annotation = {ECC: 0008544  ZSCC: 0008621 5710 citations (Semantic Scholar/DOI) [2021-04-28]},
+  file = {/Users/pabloalanis/Zotero/storage/BT4BXRST/Multiwfn_3.8_dev.pdf}
 }
 
 @article{Lu2013,
@@ -2128,6 +2159,23 @@
   langid = {english},
   annotation = {192 citations (Semantic Scholar/DOI) [2021-11-29] ZSCC: 0000238  ECC: 0000207},
   file = {/Users/pabloalanis/Zotero/storage/ZCMTUWUW/Neese et al. - 2020 - The ORCA quantum chemistry program package.pdf}
+}
+
+@article{Neese2020a,
+  title = {The {{ORCA}} Quantum Chemistry Program Package},
+  author = {Neese, Frank and Wennmohs, Frank and Becker, Ute and Riplinger, Christoph},
+  year = {2020},
+  month = jun,
+  journal = {J. Chem. Phys.},
+  volume = {152},
+  number = {22},
+  pages = {224108},
+  issn = {0021-9606, 1089-7690},
+  doi = {10/gg53w7},
+  url = {https://aip.scitation.org/doi/10.1063/5.0004608},
+  urldate = {2022-03-14},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/GJ34988U/orca_manual_5_0_3.pdf;/Users/pabloalanis/Zotero/storage/QBDAUXKR/Neese et al. - 2020 - The ORCA quantum chemistry program package.pdf}
 }
 
 @article{Nevrekar1987,
@@ -3134,6 +3182,10 @@
   publisher = {{AIP Publishing LLC}},
   doi = {10/gjqg6x},
   annotation = {ECC: 0000001}
+}
+
+@misc{zotero-1057,
+  type = {Misc}
 }
 
 @misc{zotero-882,
