txs auto checkin

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 \usepackage{chemmacros}
-%	\NewChemLatin{denovo}{de~novo}
+\usepackage{chemschemex}
 \usepackage{polyglossia}
 \usepackage{siunitx}
 
