txs auto checkin

--- a/introduction.tex
+++ b/introduction.tex
@@ -8,4 +8,5 @@ For the chemical recycling of PET, numerous protocols involving hydrolysis, meth
 
 \begin{scheme}
 \struct[Caffeine]{CF}
+\caption{Wow!}
 \end{scheme}
