txs auto checkin

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage{chemmacros}
 \usepackage{chemschemex}
-
+\usepackage{chemfig}
+\usepackage{chemnum}
 \usepackage{polyglossia}
 \usepackage{siunitx}
 
