txs auto checkin

--- a/introduction.tex
+++ b/introduction.tex
@@ -8,7 +8,13 @@ For the chemical recycling of PET, numerous protocols involving hydrolysis, meth
 
 \begin{scheme}
 \begin{Chemscheme}
-\struct[Caffeine]{CF}
+\struct{CF}
+\structplus
+\struct{CF}
+\RightArrow{}{DEE}
+2 \struct{CF}
 \end{Chemscheme}
 \caption{Wow!}
 \end{scheme}
+
+\chemname{\small\chemfig{*6(=-=-(-R)=-)}}{benzene}
