--- a/introduction.tex
+++ b/introduction.tex
@@ -6,15 +6,15 @@ Chemical recycling of PET has become an important topic since this is the most s
 
 For the chemical recycling of PET, numerous protocols involving hydrolysis, methanolysis and glycolysis among many others \cite{Campanelli1993,Campanelli1994,Campanelli1994a} have been reported. The uncatalyzed glycolysis of PET is not an effective process; transition metal (TM) salts have been determined to aid in this reaction. The oldest report of the catalyzed glycolytic degradation of PET was reported by \citeauthor{Vaidya1988} in \citeyear{Vaidya1988} \cite{Vaidya1988} in which they carried the reaction using different metal acetates as catalysts. Then it was determined that \ch{Zn^{II}} has a great in comparison to other TM (\ch{Mn^{II}}, \ch{Co^{II}} and \ch{Pb^{II}}) activity as a catalyst in the glycolysis of PET \cite{Ghaemy2005}. Alongside the numerous zinc catalysts studied to date, a novel zinc complex made with a polyaza macroligand, \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)} (ABEN) \cite{Elizondo-Martinez2013} has shown to have a great catalytic activity in the glycolytic degradation of PET yielding around \SI{78}{\percent} of BHET\cite{Ovalle-Sanchez2017}. The main purpose of this article is to evaluate the possible reaction mechanism involved in this catalyzed glycolytic depolymerization of PET with ABEN and determine the covalent or non-covalent interactions involved.
 
-\begin{scheme}
-\begin{Chemscheme}
-\struct{CF}
-\structplus
-\struct{CF}
-\RightArrow{}{DEE}
-2 \struct{CF}
-\end{Chemscheme}
-\caption{Wow!}
-\end{scheme}
-
-\chemname{\small\chemfig{*6(=-=-(-R)=-)}}{benzene}
+%\begin{scheme}
+%\begin{Chemscheme}
+%\struct{CF}
+%\structplus
+%\struct{CF}
+%\RightArrow{}{DEE}
+%2 \struct{CF}
+%\end{Chemscheme}
+%\caption{Wow!}
+%\end{scheme}
+%
+%\chemname{\small\chemfig{*6(=-=-(-R)=-)}}{benzene}
