--- a/PEAG-ref.bib
+++ b/PEAG-ref.bib
@@ -1484,6 +1484,24 @@
   annotation = {ECC: 0000021}
 }
 
+@article{Klein2020,
+  title = {New {{Way}} for {{Probing Bond Strength}}},
+  author = {Klein, Johanna and Khartabil, Hassan and Boisson, Jean-Charles and {Contreras-Garc{\'i}a}, Julia and Piquemal, Jean-Philip and H{\'e}non, Eric},
+  year = {2020},
+  month = mar,
+  journal = {J. Phys. Chem. A},
+  volume = {124},
+  number = {9},
+  pages = {1850--1860},
+  issn = {1089-5639, 1520-5215},
+  doi = {10/gjs8zv},
+  url = {https://pubs.acs.org/doi/10.1021/acs.jpca.9b09845},
+  urldate = {2022-03-22},
+  abstract = {The covalent chemical bond is intimately linked to electron sharing between atoms. The recent independent gradient model (IGM) and its {$\delta$}g descriptor provide a way to quantify locally this electron density interpenetration from wavefunction calculations. Each bond has its own IGM-{$\delta$}gpair signature. The present work establishes for the first time a strong link between this bond signature and the physically grounded bond force constant concept. Analyzing a large set of compounds and bonds, the intrinsic bond strength index (IBSI) emerges from the IGM formulation. Our study shows that the IBSI does not belong to the class of conventional bond orders (like Mulliken, Wiberg, Mayer, delocalization index, or electron localization functionELF), but is rather a new complementary index, related to the bond strength. A fundamental outcome of this research is a novel index allowing to range all two-center chemical bonds by their intrinsic strength in molecular situation. We believe that the IBSI is a powerful and robust tool for interpretation accessible to a wide community of chemists (organic, inorganic chemistry, including transition-metal complexes and reaction mechanisms).},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/WSWDVJUJ/Klein et al. - 2020 - New Way for Probing Bond Strength.pdf}
+}
+
 @article{Koblin1976,
   title = {The Effect of Chemical Modifiers on the Interaction of a Spin-Labeled Local Anesthetic with Human Erythrocyte Membranes},
   author = {Koblin, D. D. and Wang, H. H.},
