--- a/PEAG-Manuscript.tex
+++ b/PEAG-Manuscript.tex
@@ -26,7 +26,7 @@
 %% optional argument to \title.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Computational study of the glycolitic degradation of \iupac{poly|(ethylene terephthalate)} catalized by \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)}}
+\title{Computational study of the glycolitic degradation of \iupac{poly|(ethylene terephthalate)} catalyzed by \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Some journals require a list of abbreviations or keywords to be
@@ -38,17 +38,12 @@
 
 \begin{document}
 
-	\abstract{
-	\linenumbers
-	A possible reaction mechanism of the glycolytic degradation of \iupac{poly|(ethylene terephthalate)} (PET) catalyzed with \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)} (ABEN) was determined using KS-DFT using the meta-NGA global-hybrid functional, MN15 \cite{Yu2016a} up to def2-SVP/def2-TZVP level of theory making use of an energy-weighted climbing image nudged elastic band (EW-CI-NEB) algorithm \cite{Asgeirsson2021} to determine the minimum energy path (MEP) and then optimizing the converged climbing image (CI) using eigenvector-following partitioned rational function optimization (EF P-RFO) to obtain the transition state (TS). The non-covalent interactions where obtained using and averaged independent gradient model (aIGM) algorithm \cite{Lefebvre2018}
-
+\abstract{
+\linenumbers
+A possible reaction mechanism of the glycolytic degradation of \iupac{poly|(ethylene terephthalate)} (PET) catalyzed with \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)} (ABEN) was determined using KS-DFT using the meta-NGA global-hybrid functional, MN15 \cite{Yu2016a} up to def2-SVP/def2-TZVP level of theory making use of an energy-weighted climbing image nudged elastic band (EW-CI-NEB) algorithm \cite{Asgeirsson2021} to determine the minimum energy path (MEP) and then optimizing the converged climbing image (CI) using eigenvector-following partitioned rational function optimization (EF P-RFO) to obtain the transition state (TS). The non-covalent interactions where obtained using and averaged independent gradient model (aIGM) algorithm \cite{Lefebvre2018}
 
 \input{introduction}
-
 \input{methodology}
-	
-\bibliography{PEAG-ref}	
-	
+
+\bibliography{PEAG-ref}
 \end{document}
-
-
