Arreglar la bibliografía

--- a/PEAG-Manuscript.tex
+++ b/PEAG-Manuscript.tex
@@ -26,7 +26,7 @@
 %% optional argument to \title.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Computational study of the glycolitic degradation of \iupac{poly|(ethylene terephthalate)} catalyzed by \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)}}
+\title{Computational study of the glycolytic degradation of \iupac{poly|(ethylene terephthalate)} catalyzed by \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Some journals require a list of abbreviations or keywords to be
