--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 
 By 2015, the annual global production of plastics surpassed 367 million tonnes; \SI{55}{\percent} of all plastic waste was discarded, \SI{25.5}{\percent} incinerated and just \SI{19.5}{\percent} was recycled \cite{Geyer2017}. \iupac{Poly|(ethylene terephthalate)} (PET) is one of the most widely traded polymer there is on the market. It's mainly used in the fabrication of bottles, packages and fibers. The widespread usage of this plastic is due to its properties, like an excellent tensile strength, chemical resistance, clarity, processability and a reasonable thermal stability, It is also very cheap to produce \cite{Caldicott1999,Thompson2009}. Albeit all its properties, PET is also becoming a global problem, since a lot of it is not recycled at all. It is becoming a waste problem. Even tough PET by itself is not harmful to humans and by itself does not impose an environmental damage, because of its substantial presence in bodies of water and its high resistance to biological and atmospheric agents, PET is classified as a nocive material \cite{Paszun1997}
 Chemical recycling of PET has become an important topic since this is the most sustainable way of recycling plastic, and produces \latin{de novo} the starting materials of the synthesis of PET. The is an extensive amount of literature on the topic of chemical degradation of PET, processes such as methanolysis, hydrolysis and glycolysis have been thoroughly  studied \cite{Campanelli1993,Campanelli1994,Campanelli1994a}. The most sustainable reaction of degradation of PET is the glycolysis since this reaction produces \iupac{Bis|(2-hidroxy|ethyl) terephthalate} (BHET), one of the precursors of PET itself. PET glycolysis, nevertheless is not a very effective process if no catalyst is used. Plenty of studies have been made on the reaction of the degradation of PET via catalyzed glycolysis. Some transition metals such as zinc lead to a good yield in this type of reactions with the benefit that zinc is not a very toxic metal.
-For the chemical recycling of PET, numerous protocols involving hydrolysis, methanolysis and glycolysis among many others \cite{Campanelli1993,Campanelli1994,Campanelli1994a} have been reported. The uncatalyzed glycolysis of PET is not an effective process; transition metal (TM) salts have been determined to aid in this reaction. The oldest report of the catalyzed glycolytic degradation of PET was reported by \citeauthor{Vaidya1988} in \citeyear{Vaidya1988} \cite{Vaidya1988} in which they carried the reaction using different metal acetates as catalysts. Then it was determined that \ch{Zn^{II}} has a great in comparison to other TM (\ch{Mn^{II}}, \ch{Co^{II}} and \ch{Pb^{II}}) activity as a catalyst in the glycolysis of PET \cite{Ghaemy2005}. Alongside the numerous zinc catalysts studied to date, a novel zinc complex made with a polyaza macroligand, \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)} (ABEN) \cite{Elizondo-Martinez2013} has shown to have a great catalytic activity in the glycolytic degradation of PET yielding around \SI{78}{\percent} of BHET\cite{Ovalle-Sanchez2017}. The main purpose of this article is to evaluate the possible reaction mechanism involved in this catalyzed glycolytic depolymerization of PET with ABEN and determine the covalent or non-covalent interactions involved.
+For the chemical recycling of PET, numerous protocols involving hydrolysis, methanolysis and glycolysis among many others \cite{Campanelli1993,Campanelli1994,Campanelli1994a} have been reported. The uncatalyzed glycolysis of PET is not an effective process; transition metal (TM) salts have been determined to aid in this reaction. The oldest report of the catalyzed glycolytic degradation of PET was reported by \citeauthor{Vaidya1988} in \citeyear{Vaidya1988} \cite{Vaidya1988} in which they carried the reaction using different metal acetates as catalysts. Then it was determined that \ch{Zn^{II}} has a great in comparison to other TM (\ch{Mn^{II}}, \ch{Co^{II}} and \ch{Pb^{II}}) activity as a catalyst in the glycolysis of PET \cite{Ghaemy2005}. Alongside the numerous zinc catalysts studied to date, a novel zinc complex made with a polyaza macroligand, \iupac{\N^1,\N^2-bis|(2-amino|benzyl)|-1,2-|diamino|ethane zinc(II)} (ABEN) \cite{Elizondo-Martinez2013} has shown to have a great catalytic activity in the glycolytic degradation of PET yielding around \SI{78}{\percent} of BHET\cite{Ovalle-Sanchez2017}. The main purpose of this article is to evaluate the possible reaction mechanism involved in this catalyzed glycolytic depolymerization of PET with ABEN and determine the covalent or non-covalent interactions involved.\autocite{Abdelaal2008,Nikje2006}
 
 %\begin{scheme}
 %\begin{Chemscheme}
