--- a/PEAG-Manuscript.tex
+++ b/PEAG-Manuscript.tex
@@ -1,17 +1,18 @@
+% !TeX root = PEAG-Manuscript.tex
 % !TeX spellcheck = en_US
 \documentclass[journal=jacsat,manuscript=article]{achemso}
 
 \input{preamble}
 
 \author{Pablo E. Alanis González}
-\affiliation[Universidad Autónoma de Nuevo Leon]
+\affiliation[Universidad Autónoma de Nuevo León]
 {Universidad Autónoma de Nuevo León, San Nicolás de los Garza, N.L.}
 \altaffiliation{Facultad de Ciencias Químicas, UANL}
 \email{pabloalanis1998@gmail.com}
 \phone{+52 (81) 1177 3600}
 
 \author{Isabel del Carmen Saenz Tavera}
-\affiliation[Universidad Autónoma de Nuevo Leon]
+\affiliation[Universidad Autónoma de Nuevo León]
 {Facultad de Ciencias Químicas, Universidad Autónoma de Nuevo León, San Nicolás de los Garza, N.L.}
 \altaffiliation{Facultad de Ciencias Químicas, UANL}
 
