--- a/PEAG-ref.bib
+++ b/PEAG-ref.bib
@@ -304,6 +304,16 @@
   annotation = {ECC: No Data (logprob: -59.697)}
 }
 
+@article{Brandenburg2018,
+  title = {B97-3c: {{A}} Revised Low-Cost Variant of the {{B97-D}} Density Functional Method},
+  author = {Brandenburg, Jan Gerit and Bannwarth, Christoph and Hansen, Andreas and Grimme, Stefan},
+  year = {2018},
+  journal = {J. Chem. Phys.},
+  pages = {14},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/N8QZXI8Q/Brandenburg et al. - 2018 - B97-3c A revised low-cost variant of the B97-D de.pdf}
+}
+
 @article{Bringas2000,
   title = {Catalytic Depolymerization of {{PolyEthylene}} Terephtalate},
   author = {Bringas, G. A. and Flores, J. and Araiza, M. A. and Casta{\~n}o, V. M.},
@@ -985,6 +995,28 @@
   langid = {english},
   annotation = {470 citations (Semantic Scholar/DOI) [2021-06-08] ECC: 0000692},
   file = {/Users/pabloalanis/Zotero/storage/SN2BR733/Grimme et al. - 2016 - Dispersion-Corrected Mean-Field Electronic Structu.pdf}
+}
+
+@article{Grimme2021,
+  title = {{{r2SCAN-3c}}: {{A}} ``{{Swiss}} Army Knife'' Composite Electronic-Structure Method},
+  author = {Grimme, Stefan and Hansen, Andreas and Ehlert, Sebastian},
+  year = {2021},
+  journal = {The Journal},
+  pages = {19},
+  abstract = {The recently proposed r2SCAN meta-generalized-gradient approximation (mGGA) of Furness and co-workers is used to construct an efficient composite electronic-structure method termed r2SCAN-3c. To this end, the unaltered r2SCAN functional is combined with a tailor-made triple-{$\zeta$} Gaussian atomic orbital basis set as well as with refitted D4 and geometrical counter-poise corrections for London-dispersion and basis set superposition error. The performance of the new method is evaluated for the GMTKN55 database covering large parts of chemical space with about 1500 data points, as well as additional benchmarks for non-covalent interactions, organometallic reactions, and lattice energies of organic molecules and ices, as well as for the adsorption on polar salt and non-polar coinage-metal surfaces. These comprehensive tests reveal a spectacular performance and robustness of r2SCAN-3c: It by far surpasses its predecessor B97-3c at only twice the cost and provides one of the best results of all semi-local density-functional theory (DFT)/QZ methods ever tested for the GMTKN55 database at one-tenth of the cost. Specifically, for reaction and conformational energies as well as non-covalent interactions, it outperforms prominent hybrid-DFT/QZ approaches at two to three orders of magnitude lower cost. Perhaps, the most relevant remaining issue of r2SCAN-3c is self-interaction error (SIE), owing to its mGGA nature. However, SIE is slightly reduced compared to other (m)GGAs, as is demonstrated in two examples. After all, this remarkably efficient and robust method is chosen as our new group default, replacing previous composite DFT and partially even expensive high-level methods in most standard applications for systems with up to several hundreds of atoms.},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/U7YM6UW6/Grimme et al. - 2021 - r2SCAN-3c A “Swiss army knife” composite electron.pdf}
+}
+
+@article{Grimme2021a,
+  title = {{{r2SCAN-3c}}: {{A}} ``{{Swiss}} Army Knife'' Composite Electronic-Structure Method},
+  author = {Grimme, Stefan and Hansen, Andreas and Ehlert, Sebastian},
+  year = {2021},
+  journal = {The Journal},
+  pages = {19},
+  abstract = {The recently proposed r2SCAN meta-generalized-gradient approximation (mGGA) of Furness and co-workers is used to construct an efficient composite electronic-structure method termed r2SCAN-3c. To this end, the unaltered r2SCAN functional is combined with a tailor-made triple-{$\zeta$} Gaussian atomic orbital basis set as well as with refitted D4 and geometrical counter-poise corrections for London-dispersion and basis set superposition error. The performance of the new method is evaluated for the GMTKN55 database covering large parts of chemical space with about 1500 data points, as well as additional benchmarks for non-covalent interactions, organometallic reactions, and lattice energies of organic molecules and ices, as well as for the adsorption on polar salt and non-polar coinage-metal surfaces. These comprehensive tests reveal a spectacular performance and robustness of r2SCAN-3c: It by far surpasses its predecessor B97-3c at only twice the cost and provides one of the best results of all semi-local density-functional theory (DFT)/QZ methods ever tested for the GMTKN55 database at one-tenth of the cost. Specifically, for reaction and conformational energies as well as non-covalent interactions, it outperforms prominent hybrid-DFT/QZ approaches at two to three orders of magnitude lower cost. Perhaps, the most relevant remaining issue of r2SCAN-3c is self-interaction error (SIE), owing to its mGGA nature. However, SIE is slightly reduced compared to other (m)GGAs, as is demonstrated in two examples. After all, this remarkably efficient and robust method is chosen as our new group default, replacing previous composite DFT and partially even expensive high-level methods in most standard applications for systems with up to several hundreds of atoms.},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/STZGZHUA/Grimme et al. - 2021 - r2SCAN-3c A “Swiss army knife” composite electron.pdf}
 }
 
 @article{Guclu1998,
@@ -1863,6 +1895,21 @@
   langid = {english},
   annotation = {10 citations (Semantic Scholar/DOI) [2021-09-07] ECC: 0000024  ZSCC: NoCitationData[s0]},
   file = {/Users/pabloalanis/Zotero/storage/B7J82KHQ/Manzhos_Carrington_2021_Neural Network Potential Energy Surfaces for Small Molecules and Reactions.pdf}
+}
+
+@article{Mardirossian2014,
+  title = {{{$\omega$B97X-V}}: {{A}} 10-Parameter, Range-Separated Hybrid, Generalized Gradient Approximation Density Functional with Nonlocal Correlation, Designed by a Survival-of-the-Fittest Strategy},
+  shorttitle = {{{$\omega$B97X-V}}},
+  author = {Mardirossian, Narbe and {Head-Gordon}, Martin},
+  year = {2014},
+  journal = {Phys. Chem. Chem. Phys.},
+  volume = {16},
+  number = {21},
+  pages = {9904},
+  issn = {1463-9076, 1463-9084},
+  doi = {10/gf9n3d},
+  langid = {english},
+  file = {/Users/pabloalanis/Zotero/storage/75N5C2PF/Mardirossian and Head-Gordon - 2014 - ωB97X-V A 10-parameter, range-separated hybrid, g.pdf}
 }
 
 @incollection{Marechal2007,
