--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,8 @@
 \usepackage{chemmacros}
+\usepackage{chemgreek}
+\usepackage{textgreek}
 \usepackage{chemschemex}
-\usepackage{chemfig}
-\usepackage{chemnum}
+\usepackage{tikz}
 \usepackage{polyglossia}
 \usepackage{siunitx}
 
